<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_regist_success"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dip132"
        android:text="@string/regist_succ_tips"
        android:textColor="@color/colorFFA52F"
        android:textSize="@dimen/sip40" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sip52"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.13"
            android:textColor="@color/colorFFA52F"
            android:textSize="@dimen/sip96" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_yuan"
            android:textColor="@color/colorFFA52F"
            android:textSize="@dimen/sip40" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dip12"
        android:text="@string/rewart_tips"
        android:textColor="@color/colorFFA52F"
        android:textSize="@dimen/sip28" />

    <TextView
        android:id="@+id/tv_makesure"
        style="@style/normal_roundshape_btn"
        android:background="@drawable/shape_bg_yello"
        android:text="@string/make_sure"
        android:textColor="@color/bt_white" />
</LinearLayout>
