<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/phoneHint"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dip100"
        android:background="@color/window_bg"
        android:gravity="center"
        android:textColor="@color/color666"
        android:textSize="@dimen/sip24"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dip60"
        android:layout_marginRight="@dimen/dip60"
        android:layout_marginTop="@dimen/dip156"
        android:orientation="vertical">

        <com.jinzaofintech.commonlib.view.ClearableEditText
            android:id="@+id/edtPhone"
            style="@style/edt_big_heavy"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/dip26"
            android:hint="@string/please_enter_phone"
            android:inputType="phone"
            android:textColorHint="@color/color999"
            android:textSize="@dimen/sip28" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip1"
            android:background="@color/colorddd" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dip73">

            <com.jinzaofintech.commonlib.view.ClearableEditText
                android:id="@+id/edtcCode"
                style="@style/edt_big_heavy"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/dip26"
                android:layout_marginRight="@dimen/dip190"
                android:hint="@string/please_input_verify_code"
                android:inputType="number"
                android:maxLength="8"
                android:textColorHint="@color/color999"
                android:textSize="@dimen/sip28" />

            <TextView
                android:id="@+id/tvGetCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/shape_bg_round_get_verify_code"
                android:gravity="center"
                android:text="获取验证码"
                android:textColor="@color/color333"
                android:textSize="@dimen/sip24" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip1"
            android:background="@color/colorddd" />

        <TextView
            android:id="@+id/tv_verfycode_err"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dip12"
            android:text="@string/vfcode_err"
            android:textColor="@color/colorFF3015"
            android:textSize="@dimen/sip24"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtPwd"
                style="@style/edt_big_heavy"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/dip26"
                android:layout_marginTop="@dimen/dip73"
                android:hint="@string/set_new_pwd"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColorHint="@color/color999"
                android:textSize="@dimen/sip28" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dip1"
            android:background="@color/colorddd" />

        <TextView
            android:id="@+id/tv_pwd_set_err"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dip12"
            android:text="@string/no_less_than_6size_pwd"
            android:textColor="@color/colorFF3015"
            android:textSize="@dimen/sip24"
            android:visibility="gone" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_makesure"
        style="@style/normal_roundshape_btn"
        android:background="@drawable/shape_bg_yello"
        android:text="@string/make_sure"
        android:textColor="@color/bt_white" />
</LinearLayout>
